[ApiSandbox] fix regression from r109726 in some browsers * select and input elements have different box models in different browsers, decreasing width  by 1em so that it won't cause overflow * use '' instead of '-' consistently * give selects the same width as well * buttons were not aligned to the right in IE7. Fixed by using float instead of text-align and relying on inline-block from jQuery UI.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@109779 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ApiSandbox/ext.apiSandbox.css
+++ b/ApiSandbox/ext.apiSandbox.css
@@ -1,6 +1,11 @@
 /* Buttons */
+
 #api-sandbox-buttons {
-	text-align: right;
+	float: right;
+}
+
+#api-sandbox-buttons button {
+	float: left;
 }
 
 /* Options */
@@ -29,6 +34,7 @@
 }
 
 /* Params */
+
 .api-sandbox-params {
 	width: 100%;
 	table-layout: fixed;
@@ -51,9 +57,10 @@
 	overflow: auto;
 }
 
-.api-sandbox-params input[type="text"] {
+.api-sandbox-params input[type="text"],
+.api-sandbox-params select {
 	padding: 2px 3px;
-	width: 19em;
+	width: 18em;
 }
 
 th.api-sandbox-params-label,
